UI Polish: Refined buttons, FAQ accordion, and footer branding based on screenshots

--- a/index.html
+++ b/index.html
@@ -254,7 +254,10 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <div class="footer-logo">GrowthStudio</div>
+                    <div class="footer-logo">
+                        <img src="logo.svg" alt="GrowthStudio">
+                        GrowthStudio
+                    </div>
                     <p style="opacity: 0.5; max-width: 240px;">We’re a performance-first distribution partner. No fluff.
                         Real signals.</p>
                 </div>
