Update Premium pricing to ,000+ across all pages

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                         </div>
                         <div class="offer-action">
                             <p style="font-size: 14px; opacity: 0.8;">Starter from <strong>$1,200/mo</strong>. Growth
-                                from <strong>$2,500/mo</strong>. Two-week
-                                proof sprint required first.</p>
+                                from <strong>$2,500/mo</strong>. Premium from <strong>$5,000/mo</strong>.</p>
                             <br>
                             <a href="pricing.html" class="btn btn-outline"
                                 style="width: 100%; border-radius: 100px; padding: 15px;">Pick your plan</a>
