--- a/pricing.html
+++ b/pricing.html
@@ -225,7 +225,7 @@
                     <div class="plan-card">
                         <div class="plan-header">
                             <h3>Premium</h3>
-                            <div class="price">Custom</div>
+                            <div class="price">$5,000<span>/mo</span></div>
                             <p>Full distribution ownership</p>
                         </div>
                         <div class="plan-body">
