Comprehensive responsiveness overhaul: fluid typography, flexible grids, and mobile-first section spacing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="hero-btns">
                             <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary">Book a proof
                                 sprint <span class="btn-icon">→</span></a>
-                            <a href="pricing.html" class="btn btn-outline" style="margin-left: 16px;">See pricing</a>
+                            <a href="pricing.html" class="btn btn-outline">See pricing</a>
                         </div>
                     </div>
                     <div class="hero-visual">
@@ -105,10 +105,9 @@
             </div>
 
             <!-- What We Do (Offer Boxes) -->
-            <div class="container" id="services" style="padding-top: 100px; padding-bottom: 100px;">
+            <div class="container section-padding" id="services">
                 <div class="grid-2">
-                    <div class="offer-box"
-                        style="grid-template-columns: 1fr; padding: 40px; gap: 32px; margin-bottom: 0;">
+                    <div class="offer-box">
                         <div class="offer-info">
                             <h2 style="font-size: 32px;">Growth<br>Retainer</h2>
                             <p style="font-size: 14px; opacity: 0.8; margin-top: 16px;"><strong>Starter:</strong> One
@@ -120,13 +119,11 @@
                             <p style="font-size: 14px; opacity: 0.8;">Starter from <strong>$1,200/mo</strong>. Growth
                                 from <strong>$2,500/mo</strong>. Premium from <strong>$5,000/mo</strong>.</p>
                             <br>
-                            <a href="pricing.html" class="btn btn-outline"
-                                style="width: 100%; border-radius: 100px; padding: 15px;">Pick your plan</a>
+                            <a href="pricing.html" class="btn btn-outline full-width">Pick your plan</a>
                         </div>
                     </div>
 
-                    <div class="offer-box"
-                        style="grid-template-columns: 1fr; padding: 40px; gap: 32px; margin-bottom: 0;">
+                    <div class="offer-box">
                         <div class="offer-info">
                             <h2 style="font-size: 32px;">Performance<br>Partnerships</h2>
                             <p style="font-size: 14px; opacity: 0.8; margin-top: 16px;">Retainer + performance fee or
@@ -137,24 +134,24 @@
                             <p style="font-size: 14px; opacity: 0.8;">For scaling teams. Dedicated analyst, weekly exec
                                 briefings.</p>
                             <br>
-                            <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-outline"
-                                style="width: 100%; border-radius: 100px; padding: 15px;">Talk to sales</a>
+                            <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-outline full-width">Talk
+                                to sales</a>
                         </div>
                     </div>
                 </div>
             </div>
 
             <!-- How It Works -->
-            <div class="container" id="how-it-works" style="padding-top: 100px;">
-                <h2 style="font-size: 60px; margin-bottom: 60px;">How it works</h2>
+            <div class="container section-padding" id="how-it-works">
+                <h2 class="section-title">How it works</h2>
                 <div class="grid-3">
                     <div class="step-card">
                         <video autoplay muted loop playsinline
                             style="width: 100%; height: auto; border-radius: 16px; margin-bottom: 32px;">
                             <source src="ai_solutions-loop.webm" type="video/webm">
                         </video>
-                        <h3 style="font-size: 32px; margin-bottom: 16px; text-transform: uppercase;">Sprint</h3>
-                        <p style="font-size: 16px; opacity: 0.8;">We test one high-probability channel and produce a
+                        <h3 class="step-title">Sprint</h3>
+                        <p class="step-desc">We test one high-probability channel and produce a
                             decision pack in 14 days.</p>
                     </div>
                     <div class="step-card">
@@ -162,8 +159,8 @@
                             style="width: 100%; height: auto; border-radius: 16px; margin-bottom: 32px;">
                             <source src="x_as_a_service-loop.webm" type="video/webm">
                         </video>
-                        <h3 style="font-size: 32px; margin-bottom: 16px; text-transform: uppercase;">Retainer</h3>
-                        <p style="font-size: 16px; opacity: 0.8;">If the sprint proves out, we take over distribution
+                        <h3 class="step-title">Retainer</h3>
+                        <p class="step-desc">If the sprint proves out, we take over distribution
                             with a clear roadmap and SLAs.</p>
                     </div>
                     <div class="step-card">
@@ -171,8 +168,8 @@
                             style="width: 100%; height: auto; border-radius: 16px; margin-bottom: 32px;">
                             <source src="professional_services-loop.webm" type="video/webm">
                         </video>
-                        <h3 style="font-size: 32px; margin-bottom: 16px; text-transform: uppercase;">Scale</h3>
-                        <p style="font-size: 16px; opacity: 0.8;">Paid pilots with measurable KPIs, then multi-quarter
+                        <h3 class="step-title">Scale</h3>
+                        <p class="step-desc">Paid pilots with measurable KPIs, then multi-quarter
                             partnerships.</p>
                     </div>
                 </div>
@@ -188,8 +185,8 @@
 
 
         <!-- FAQ -->
-        <section class="container-sm" id="faq" style="padding: 100px 0;">
-            <h2 style="font-size: 48px; margin-bottom: 40px;">FAQ</h2>
+        <section class="container-sm section-padding" id="faq">
+            <h2 class="section-title">FAQ</h2>
             <div class="faq-list">
                 <div class="faq-item">
                     <div class="faq-header">
