--- a/pricing.html
+++ b/pricing.html
@@ -139,6 +139,37 @@
             font-weight: 800;
             font-size: 24px;
         }
+
+        @media (max-width: 768px) {
+            .pricing-hero {
+                padding: 140px 0 60px;
+            }
+
+            .plan-card {
+                padding: 40px 24px;
+            }
+
+            .price {
+                font-size: 48px;
+            }
+
+            .add-ons-section {
+                margin: 20px 0;
+                padding: 60px 0;
+            }
+
+            .add-on-item h4 {
+                font-size: 16px;
+                line-height: 1.4;
+            }
+
+            .plan-body ul li {
+                padding: 12px 0;
+                font-size: 14px;
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+        }
     </style>
 </head>
 
