Refine mobile navigation and footer branding: moved CTA into mobile menu and cleaned up footer logo

--- a/pricing.html
+++ b/pricing.html
@@ -185,9 +185,11 @@
                 <li><a href="pricing.html" class="active">Plans</a></li>
                 <li><a href="index.html#faq">FAQ</a></li>
             </ul>
+            <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary nav-mobile-cta">Book a
+                Sprint</a>
         </nav>
         <div class="nav-actions">
-            <a href="https://cal.com/growthstudio/discoverycall" class="btn-nav">Book a Sprint</a>
+            <a href="https://cal.com/growthstudio/discoverycall" class="btn-nav nav-desktop-cta">Book a Sprint</a>
             <button class="mobile-toggle" aria-label="Toggle Menu">
                 <span></span>
                 <span></span>
