--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
             <div class="container">
                 <div class="hero-grid">
                     <div class="hero-content">
-                        <h1><span></span>We become your</span><span>distribution</span><span>team.</span></h1>
-                        <p class="subhead">Landing pages, paid channels, affiliates, and weekly reporting — shipped as a
-                            predictable retainer. Two-week proof sprint. No hiring, no fluff.</p>
+                        <h1><span>WE BECOME YOUR</span>
+                            <span>DISTRIBUTION TEAM.</span>
+                        </h1>
+                        <p class="subhead">We will go to hell, and back to make sure that the Goals and Targets are hit.
+                        </p>
                         <div class="hero-btns">
                             <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary">Book a proof
                                 sprint <span class="btn-icon">→</span></a>
