Integrated new Outcome-based pricing plans onto homepage and moved separate pricing page

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </a>
         <nav class="nav-container">
             <ul class="nav-links">
-                <li><a href="index.html#how-it-works">How it works</a></li>
-                <li><a href="pricing.html">Plans</a></li>
-                <li><a href="index.html#faq">FAQ</a></li>
+                <li><a href="#how-it-works">How it works</a></li>
+                <li><a href="#pricing">Plans</a></li>
+                <li><a href="#faq">FAQ</a></li>
             </ul>
             <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary nav-mobile-cta">Book a
                 Sprint</a>
@@ -58,7 +58,7 @@
                         <div class="hero-btns">
                             <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary">Book a proof
                                 sprint <span class="btn-icon">→</span></a>
-                            <a href="pricing.html" class="btn btn-outline">See pricing</a>
+                            <a href="#pricing" class="btn btn-outline">See pricing</a>
                         </div>
                     </div>
                     <div class="hero-visual">
@@ -91,59 +91,112 @@
                     </div>
                 </div>
             </div>
-            <div class="container" style="margin-top: 60px;">
-                <div class="offer-box accent-bg">
-                    <div class="offer-info">
-                        <h2>14-Day<br>Proof Sprint</h2>
-                        <p><strong>What you get:</strong> positioning intake, landing page, 3 creative variants, a
-                            targeted distribution play, baseline dashboard, and a decision brief.</p>
-                    </div>
-                    <div class="offer-action">
-                        <p><strong>Promise:</strong> One validated channel or a clear go/no-go with data. Refundable
-                            deposit or apply for a free pilot slot.</p>
-                        <br>
-                        <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary">Run the sprint
-                            <span class="btn-icon">→</span></a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- What We Do (Offer Boxes) -->
-            <div class="container section-padding" id="services">
-                <div class="grid-2">
-                    <div class="offer-box">
-                        <div class="offer-info">
-                            <h2 style="font-size: 32px;">Growth<br>Retainer</h2>
-                            <p style="font-size: 14px; opacity: 0.8; margin-top: 16px;"><strong>Starter:</strong> One
-                                owned channel, weekly report.<br>
-                                <strong>Growth:</strong> Two owned channels, affiliates pilot, CRO.
-                            </p>
-                        </div>
-                        <div class="offer-action">
-                            <p style="font-size: 14px; opacity: 0.8;">Starter from <strong>$1,200/mo</strong>. Growth
-                                from <strong>$2,500/mo</strong>. Premium from <strong>$5,000/mo</strong>.</p>
-                            <br>
-                            <a href="pricing.html" class="btn btn-outline full-width">Pick your plan</a>
-                        </div>
+            <!-- Pricing Section -->
+            <section class="section-padding" id="pricing">
+                <div class="container">
+                    <div style="text-align: center; margin-bottom: 80px;">
+                        <h2 class="section-title" style="margin-bottom: 24px;">We don’t sell services. We sell Outcomes.
+                        </h2>
+                        <p style="max-width: 700px; margin: 0 auto; font-size: 20px; opacity: 0.7;">Stop hiring
+                            specialized
+                            agencies that point fingers when things go wrong. We own your entire distribution engine. If
+                            the
+                            numbers don't move, we don't sleep.</p>
                     </div>
 
-                    <div class="offer-box">
-                        <div class="offer-info">
-                            <h2 style="font-size: 32px;">Performance<br>Partnerships</h2>
-                            <p style="font-size: 14px; opacity: 0.8; margin-top: 16px;">Retainer + performance fee or
-                                revenue-share pilots. Timeboxed paid pilots (6–8 weeks)
-                                available for established teams.</p>
+                    <div class="grid-3">
+                        <!-- Tier 1 -->
+                        <div class="plan-card">
+                            <div class="plan-header">
+                                <h3>The Pilot</h3>
+                                <div class="price">$2,450<span>/mo</span></div>
+                                <p>Best for: Startups with a product but zero clear distribution.</p>
+                            </div>
+                            <div class="plan-body">
+                                <p style="font-weight: 700; margin-bottom: 20px; color: var(--accent);">Goal: Finding
+                                    your
+                                    "First Scalable Channel"</p>
+                                <ul>
+                                    <li>Full Distribution Setup <span>Ads/Email/Content</span></li>
+                                    <li>KPI Tracking <span>Real-time Dashboard</span></li>
+                                    <li>Optimization <span>Weekly Sprints</span></li>
+                                </ul>
+                                <div class="guarantee-box">
+                                    <strong>The 30-Day Pivot Guarantee</strong>
+                                    <p>If we don't find a channel with a positive signal (CPC, Lead, or User) within the
+                                        first 30 days, your second month is 50% off while we pivot the strategy at our
+                                        own
+                                        expense.</p>
+                                </div>
+                            </div>
+                            <div class="plan-footer">
+                                <a href="https://cal.com/growthstudio/discoverycall"
+                                    class="btn btn-primary full-width">Select
+                                    Pilot</a>
+                            </div>
                         </div>
-                        <div class="offer-action">
-                            <p style="font-size: 14px; opacity: 0.8;">For scaling teams. Dedicated analyst, weekly exec
-                                briefings.</p>
-                            <br>
-                            <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-outline full-width">Talk
-                                to sales</a>
+
+                        <!-- Tier 2 -->
+                        <div class="plan-card featured">
+                            <div class="plan-header">
+                                <h3>The Engine</h3>
+                                <div class="price">$4,950<span>/mo</span></div>
+                                <p>Best for: Startups ready to scale a proven concept. Our flagship suite.</p>
+                            </div>
+                            <div class="plan-body">
+                                <p style="font-weight: 700; margin-bottom: 20px; color: black;">Goal: Predictable User
+                                    Acquisition & ROI</p>
+                                <ul>
+                                    <li>Everything in Tier 1 <span>Included</span></li>
+                                    <li>Full-stack execution <span>End-to-end</span></li>
+                                    <li>Affiliate Mgmt <span>Included</span></li>
+                                    <li>24/7 Slack <span>War Room Access</span></li>
+                                </ul>
+                                <div class="guarantee-box">
+                                    <strong>The "Skin in the Game" Clause</strong>
+                                    <p>After month 3, if we haven't hit our agreed-upon Growth Milestone, we drop our
+                                        fee to
+                                        $2,500 (at-cost) until the goal is achieved. We only win when you win.</p>
+                                </div>
+                            </div>
+                            <div class="plan-footer">
+                                <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary full-width"
+                                    style="background: black; color: white;">Select Engine</a>
+                            </div>
+                        </div>
+
+                        <!-- Tier 3 -->
+                        <div class="plan-card">
+                            <div class="plan-header">
+                                <h3>The Monopoly</h3>
+                                <div class="price">$8,500<span>/mo</span></div>
+                                <p>Best for: Funded startups who want to dominate their niche.</p>
+                            </div>
+                            <div class="plan-body">
+                                <p style="font-weight: 700; margin-bottom: 20px; color: var(--accent);">Goal: Aggressive
+                                    Market Share & Brand Authority</p>
+                                <ul>
+                                    <li>Everything in Tier 2 <span>Included</span></li>
+                                    <li>Content Repurposing <span>Founder Brand</span></li>
+                                    <li>Double Bandwidth <span>2x Experiments</span></li>
+                                    <li>Sales Automation <span>B2B Focus</span></li>
+                                </ul>
+                                <div class="guarantee-box">
+                                    <strong>The "Check-Mating" Guarantee</strong>
+                                    <p>We only take on one company per niche at this level. Once you're in, we refuse to
+                                        work
+                                        with your competitors. Total loyalty, total focus.</p>
+                                </div>
+                            </div>
+                            <div class="plan-footer">
+                                <a href="https://cal.com/growthstudio/discoverycall"
+                                    class="btn btn-primary full-width">Select
+                                    Monopoly</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- How It Works -->
             <div class="container section-padding" id="how-it-works">
@@ -264,9 +317,9 @@
                 <div class="footer-col">
                     <h4>LINKS</h4>
                     <ul>
-                        <li><a href="index.html#how-it-works">How it works</a></li>
-                        <li><a href="pricing.html">Plans</a></li>
-                        <li><a href="index.html#faq">FAQ</a></li>
+                        <li><a href="#how-it-works">How it works</a></li>
+                        <li><a href="#pricing">Plans</a></li>
+                        <li><a href="#faq">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
