Fix pricing plan legibility: optimized color contrast and text visibility across all tiers

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                                 <p>Best for: Startups with a product but zero clear distribution.</p>
                             </div>
                             <div class="plan-body">
-                                <p style="font-weight: 700; margin-bottom: 20px; color: var(--accent);">Goal: Finding
+                                <p style="font-weight: 800; margin-bottom: 24px; color: black; font-size: 15px;">Goal:
+                                    Finding
                                     your
                                     "First Scalable Channel"</p>
                                 <ul>
@@ -144,7 +145,8 @@
                                 <p>Best for: Startups ready to scale a proven concept. Our flagship suite.</p>
                             </div>
                             <div class="plan-body">
-                                <p style="font-weight: 700; margin-bottom: 20px; color: black;">Goal: Predictable User
+                                <p style="font-weight: 800; margin-bottom: 24px; color: black; font-size: 15px;">Goal:
+                                    Predictable User
                                     Acquisition & ROI</p>
                                 <ul>
                                     <li>Everything in Tier 1 <span>Included</span></li>
@@ -160,8 +162,9 @@
                                 </div>
                             </div>
                             <div class="plan-footer">
-                                <a href="https://cal.com/growthstudio/discoverycall" class="btn btn-primary full-width"
-                                    style="background: black; color: white;">Select Engine</a>
+                                <a href="https://cal.com/growthstudio/discoverycall"
+                                    class="btn btn-primary full-width">Select
+                                    Engine</a>
                             </div>
                         </div>
 
@@ -173,7 +176,8 @@
                                 <p>Best for: Funded startups who want to dominate their niche.</p>
                             </div>
                             <div class="plan-body">
-                                <p style="font-weight: 700; margin-bottom: 20px; color: var(--accent);">Goal: Aggressive
+                                <p style="font-weight: 800; margin-bottom: 24px; color: black; font-size: 15px;">Goal:
+                                    Aggressive
                                     Market Share & Brand Authority</p>
                                 <ul>
                                     <li>Everything in Tier 2 <span>Included</span></li>
