Update 'How it works' copy and fix pricing plan text visibility

--- a/index.html
+++ b/index.html
@@ -211,27 +211,30 @@
                             style="width: 100%; height: auto; border-radius: 16px; margin-bottom: 32px;">
                             <source src="ai_solutions-loop.webm" type="video/webm">
                         </video>
-                        <h3 class="step-title">Sprint</h3>
-                        <p class="step-desc">We test one high-probability channel and produce a
-                            decision pack in 14 days.</p>
+                        <h3 class="step-title">The 14-Day Validation Blitz</h3>
+                        <p class="step-desc">We don't just 'test'—we ship. Within 14 days, we identify your
+                            highest-probability distribution channel, run live experiments, and deliver a battle-ready
+                            roadmap with real data. No fluff, just proof of work.</p>
                     </div>
                     <div class="step-card">
                         <video autoplay muted loop playsinline
                             style="width: 100%; height: auto; border-radius: 16px; margin-bottom: 32px;">
                             <source src="x_as_a_service-loop.webm" type="video/webm">
                         </video>
-                        <h3 class="step-title">Retainer</h3>
-                        <p class="step-desc">If the sprint proves out, we take over distribution
-                            with a clear roadmap and SLAs.</p>
+                        <h3 class="step-title">Full-Stack Distribution Engine</h3>
+                        <p class="step-desc">Once we find what works, we own it. We become your embedded growth team,
+                            handling everything from creative and copy to technical tracking and ad management. You stop
+                            managing 'tasks' and start managing outcomes.</p>
                     </div>
                     <div class="step-card">
                         <video autoplay muted loop playsinline
                             style="width: 100%; height: auto; border-radius: 16px; margin-bottom: 32px;">
                             <source src="professional_services-loop.webm" type="video/webm">
                         </video>
-                        <h3 class="step-title">Scale</h3>
-                        <p class="step-desc">Paid pilots with measurable KPIs, then multi-quarter
-                            partnerships.</p>
+                        <h3 class="step-title">Compound Velocity & Dominance</h3>
+                        <p class="step-desc">We double down on winning channels and build defensive moats around your
+                            brand. Through paid pilots and affiliate ecosystems, we scale your user base aggressively
+                            while ensuring your unit economics stay healthy.</p>
                     </div>
                 </div>
             </div>
